Introduce music settings generation and processing functionality, refactor services to include `MusicSettingGenerationService` and `MusicSettingsPreparationService`, and align generation flows with modular architecture while updating related package structures and imports.